--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation "androidx.test:core:1.4.0"
     debugImplementation "androidx.fragment:fragment-testing:1.4.1"
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.9.1'
 
     def nav_version = "2.5.1"
     implementation "androidx.navigation:navigation-fragment:$nav_version"
