--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,12 +30,19 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    composeOptions {
+        kotlinCompilerExtensionVersion '1.4.0'
+    }
+    buildFeatures {
+        compose true
+    }
 
-    testOptions {
-        unitTests {
-            unitTests.includeAndroidResources = true
+    packagingOptions {
+        resources {
+            excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
     }
+    namespace 'com.kotlintrialblackjack'
 }
 
 dependencies {
@@ -45,15 +52,15 @@ dependencies {
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.test.ext:junit-ktx:1.1.3'
+    implementation 'androidx.test.ext:junit-ktx:1.1.5'
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.robolectric:robolectric:4.8.1'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation "androidx.test:core:1.4.0"
-    debugImplementation "androidx.fragment:fragment-testing:1.4.1"
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation "androidx.test:core:1.5.0"
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.9.1'
 
+    //Navigation
     def nav_version = "2.5.1"
     implementation "androidx.navigation:navigation-fragment:$nav_version"
     implementation "androidx.navigation:navigation-ui:$nav_version"
@@ -61,9 +68,29 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
 
+    //Lifecycle
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$nav_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$nav_version"
 
+    //ExampleInstrumentedTest
+    androidTestImplementation 'androidx.test:runner:1.5.0'
+    androidTestImplementation 'androidx.test:rules:1.5.0'
+
+    //Compose
+    implementation "androidx.compose.ui:ui:$compose_version"
+    implementation "androidx.compose.material:material:$compose_version"
+    implementation 'androidx.activity:activity-compose:1.7.0'
+    implementation "androidx.compose.material:material:$compose_version"
+    implementation "androidx.compose.ui:ui-tooling:$compose_version"
+
+    //Compose Test
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
+    androidTestImplementation "androidx.compose.ui:ui-test"
+    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
+    androidTestImplementation "androidx.navigation:navigation-testing:2.5.3"
+    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
+
+    //Module
     implementation(project(":ui"))
     implementation(project(":logic"))
 }
