--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,13 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-plugins {
-    id 'com.android.application' version '7.2.2' apply false
-    id 'com.android.library' version '7.2.2' apply false
-    id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
-    id 'androidx.navigation.safeargs' version '2.5.1' apply false
+buildscript {
+    ext {
+        compose_version = '1.4.1'
+    }
 }
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
+plugins {
+    id 'com.android.application' version '8.0.0' apply false
+    id 'com.android.library' version '8.0.0' apply false
+    id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
+    id 'androidx.navigation.safeargs' version '2.5.1' apply false
 }
